2003-05-26  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-common.[c,h]: New source files implementing some
	common routines scattered throughout the gmime sources (currently
	a strcase_hash and strcase_equal implementation).

	* gmime/gmime-object.c (type_registry_init): Use the new
	g_mime_strcase_[hash,equal] functions from gmime-common.h.
	(g_mime_object_register_type): Here too.

	* gmime/gmime-filter-enriched.c
	(g_mime_filter_enriched_class_init): Use the new
	g_mime_strcase_[hash,equal] functions from gmime-common.h.

2003-05-22  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-parser.c (parser_construct_multipart): Fixed to
	properly handle multiparts which do not end with their own
	end-boundary. See bug #113527 for details.

2003-05-22  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Check for sys/param.h

	* gmime/gmime-stream-mmap.h: Removed sys/mman.h and unistd.h from
	the #includes. These are needed in the ehader and will break the
	build on win32.

	* gmime/gmime-utils.c: Only #include sys/param.h if the system has
	it. Also added unistd.h and sys/types.h as they should have been
	there for pid_t.

2003-05-21  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-message.c (handle_multipart_mixed): Don't look at
	the subtype of the first_type unless we have already defined
	first_type. Fixes a crash.

	* gmime/gmime-multipart.c
	(g_mime_multipart_get_subpart_from_content_id): Don't return a
	const GMimeObject, ref it to be consistant with the rest of the
	API.

	* gmime/gmime-message-partial.c
	(g_mime_message_partial_split_message): Fixed an optimisation gone
	bad. Thanks to Piotr Klaban for reporting this.

2003-05-19  Jeffrey Stedfast  <fejj@ximian.com>

	* tests/test-mbox.c: Fixed a memory leak.

	* gmime/gmime-multipart-encrypted.c: Same as below.

	* gmime/gmime-multipart-signed.c: Fixed the prototype for
	write_to_stream().

2003-05-17  Jeffrey Stedfast  <fejj@ximian.com>

	* docs/reference/streams.sgml: Updated for correctness.
