@@ -322,8 +322,7 @@ g_mime_multipart_signed_sign (GMimeMultipartSigned *mps, GMimeObject *content,
 	g_mime_stream_reset (stream);
 	
 	/* construct the content part */
-	parser = g_mime_parser_new ();
-	g_mime_parser_init_with_stream (parser, stream);
+	parser = g_mime_parser_new_with_stream (stream);
 	content = g_mime_parser_construct_part (parser);
 	g_mime_stream_unref (stream);
 	g_object_unref (parser);
@@ -380,7 +379,7 @@ g_mime_multipart_signed_verify (GMimeMultipartSigned *mps, GMimeCipherContext *c
 	GMimeObject *content, *signature;
 	GMimeDataWrapper *wrapper;
 	GMimeStream *filtered_stream;
-	GMimeFilter *crlf_filter, *strip_filter;
+	GMimeFilter *crlf_filter;
 	GMimeStream *stream, *sigstream;
 	const char *protocol, *micalg;
 	GMimeCipherValidity *valid;
@@ -420,11 +419,6 @@ g_mime_multipart_signed_verify (GMimeMultipartSigned *mps, GMimeCipherContext *c
 	/* get the content stream */
 	stream = g_mime_stream_mem_new ();
 	filtered_stream = g_mime_stream_filter_new_with_stream (stream);
-	
-	/* Note: see rfc3156, section 5.4 (this is the main difference between rfc2015 and rfc3156) */
-	strip_filter = g_mime_filter_strip_new ();
-	g_mime_stream_filter_add (GMIME_STREAM_FILTER (filtered_stream), strip_filter);
-	g_object_unref (strip_filter);
 	
 	/* Note: see rfc2015 or rfc3156, section 5.1 */
 	crlf_filter = g_mime_filter_crlf_new (GMIME_FILTER_CRLF_ENCODE,
